--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 <body>
     <header>
         <div class="profile-section">
-            <h1>atuhaire mary precious - Records Manager</h1>
+            <h1>Atuhaire Mary Precious - Records Manager</h1>
+            <p style="font-size: 1.2em;  text-align: center;">I am a Records Manager with a passion for records management and information management. I have a passion for records management and information management. I have a passion for records management and information management.</p>
+            <h5 style="font-size: 1.2em;  text-align: center;">Student Number:2300706837</h5>
             <div class="profile-content">
                 <div class="photo-box">
                     <div class="photo-placeholder">
-                        Your Photo<br>(Passport Size)
+                        <img src="WhatsApp Image 2025-10-27 at 20.12.29.jpeg" alt="My Photo" style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                 </div>
                 <nav class="menu">
@@ -30,13 +32,13 @@
         <h2>Education</h2>
         <div class="schools-grid">
             <div class="school-item">
-                <span class="year">2008</span> DEF High School
+                <span class="year">2015</span> Parental Care Primary School
             </div>
             <div class="school-item">
-                <span class="year">2012</span> GHI College (Diploma in Library & Information Science)
+                <span class="year">2022</span> Plus two high  school
             </div>
             <div class="school-item">
-                <span class="year">2016</span> Makerere University (BA in Records & Archives Management)
+                <span class="year">2027</span> Makerere University (BA Of Library and Information Science)
             </div>
         </div>
     </section>
@@ -44,34 +46,25 @@
     <section id="work" class="work-section">
         <h2>Work Experience</h2>
         <ul>
-            <li><strong>2017-2019:</strong> Records Assistant at City Health Clinic</li>
-            <li><strong>2019-2022:</strong> Records Officer at Ministry of Education</li>
-            <li><strong>2022-Present:</strong> Senior Records Manager at National Archives</li>
+            <li><strong>2024-2024:</strong> Records Assistant at City Health Clinic</li>
+            <li><strong>2025:</strong> Collected data at Uganda Bureau of Statistics</li>
         </ul>
     </section>
 
-    <section id="skills" class="hobbies-section">
-        <h2>Key Skills</h2>
-        <ul>
-            <li>Records Management Systems (e.g., Alfresco, SharePoint)</li>
-            <li>Document Digitization & Archiving</li>
-            <li>Data Privacy & Compliance (GDPR, HIPAA)</li>
-            <li>Information Retrieval</li>
-            <li>Team Leadership & Training</li>
-        </ul>
-    </section>
 
-    <section id="certifications" class="certifications-section">
-        <h2>Certifications</h2>
+    <section id="hobbies" class="hobbies-section">
+        <h2>Hobbies</h2>
         <ul>
-            <li>Certified Records Manager (CRM) - 2020</li>
-            <li>ISO 15489 Records Management Fundamentals - 2021</li>
-            <li>Certificate in Digital Archiving - 2022</li>
+            <li>Reading novels and professional books</li>
+            <li>Photography</li>
+            <li>Traveling and exploring new places</li>
+            <li>Volunteering in community projects</li>
+            <li>Listening to music</li>
         </ul>
     </section>
 
     <footer>
-        <p>&copy; 2024 Jane Smith - Records Manager</p>
+        <p>&copy; 2025 Atuhaire Mary Precious - Records Manager</p>
     </footer>
 </body>
 </html>
